카테고리 기본 데이터 삽입

--- a/TripPaw/pom.xml
+++ b/TripPaw/pom.xml
@@ -65,6 +65,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- mybatis -->
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<!-- -->
 		<!-- -->
 		<dependency>
