--- a/TripPaw/src/main/resources/application.properties
+++ b/TripPaw/src/main/resources/application.properties
@@ -39,4 +39,7 @@ spring.servlet.multipart.max-request-size=50MB
 upload.path=/upload/**
 resource.path=src/main/resoutces/static/upload/
 
+spring.jpa.hibernate.ddl-auto=update
 
+# data.sql
+spring.sql.init.mode=always
