--- a/TripPaw/pom.xml
+++ b/TripPaw/pom.xml
@@ -148,6 +148,19 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- JSON 파싱용 -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
+
+		<!-- 또는 jackson 사용 시 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
