--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -9,9 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
     "axois": "^0.0.1-security",
+    "date-fns": "^4.1.0",
     "next": "^15.3.4",
+    "package.json": "^2.0.1",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
