2025_07_01 Team_Project3 _Day 3 예약/결제 페이지 react연동

--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -16,7 +16,8 @@
     "package.json": "^2.0.1",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
