--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "bwip-js": "^4.6.0",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "immer": "^9.0.19",
     "moment": "^2.30.1",
     "next": "^13.4.13",
@@ -25,6 +26,7 @@
     "react-barcode": "^1.6.1",
     "react-calendar": "^6.0.0",
     "react-cookie": "^8.0.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-is": "^19.1.0",
     "react-redux": "^8.0.5",
