--- a/TripPaw/src/main/resources/application.properties
+++ b/TripPaw/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.mvc.view.suffix=.jsp
 # Loggings
 logging.level.org.hibernate=info
 
+
+
 spring.profiles.include=oauth
 
 
@@ -47,7 +49,9 @@ resource.path=src/main/resoutces/static/upload/
 # data.sql
 #spring.sql.init.mode=always
 
+#logging.level.org.mybatis=DEBUG
 logging.level.org.mybatis=DEBUG
+logging.level.org.apache.ibatis=TRACE
 
 ## pay api
 iamport.api.key=8644270204803546
