--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -29,6 +29,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-is": "^19.1.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.30.3",
