--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -53,5 +53,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react-hooks": "^2.5.0"
   },
-  "description": ""
+  "description": "",
+  "proxy": "http://localhost:8080"
 }
