--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next dev"
   },
   "author": "ssdam",
   "license": "ISC",
@@ -21,7 +21,6 @@
     "next": "^13.4.13",
     "next-redux-wrapper": "^6.0.2",
     "nodemailer": "^7.0.3",
-    "package.json": "^2.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
