--- a/TripPaw/src/main/resources/application.properties
+++ b/TripPaw/src/main/resources/application.properties
@@ -31,8 +31,6 @@ spring.mvc.view.suffix=.jsp
 # Loggings
 logging.level.org.hibernate=info
 
-
-
 spring.profiles.include=oauth
 
 
@@ -47,6 +45,8 @@ spring.servlet.multipart.max-request-size=50MB
 upload.path=/upload/**
 resource.path=src/main/resoutces/static/upload/
 
+spring.redis.host=localhost
+spring.redis.port=6379
 # data.sql
 #spring.sql.init.mode=always
 
