--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@next/bundle-analyzer": "^15.3.3",
+    "@rc-component/util": "^1.2.1",
     "@stomp/stompjs": "^7.1.1",
     "antd": "^4.24.16",
     "axios": "^1.9.0",
@@ -19,10 +20,11 @@
     "html2canvas": "^1.4.1",
     "immer": "^9.0.19",
     "moment": "^2.30.1",
-    "next": "^13.4.13",
+    "next": "^15.3.5",
     "next-redux-wrapper": "^6.0.2",
     "nodemailer": "^7.0.3",
     "prop-types": "^15.8.1",
+    "rc-util": "^5.44.4",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
     "react-calendar": "^6.0.0",
