--- a/TripPaw/pom.xml
+++ b/TripPaw/pom.xml
@@ -197,6 +197,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		
+		<!-- Jackson Databind -->
+		<!-- Jackson Databind -->
+		<dependency>
+		   <groupId>com.fasterxml.jackson.core</groupId>
+		   <artifactId>jackson-databind</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.web3j</groupId>
+		    <artifactId>core</artifactId>
+		    <version>4.8.7</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
