--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -12,7 +12,7 @@
     "@next/bundle-analyzer": "^15.3.3",
     "@rc-component/util": "^1.2.1",
     "@stomp/stompjs": "^7.1.1",
-    "antd": "^4.24.16",
+    "antd": "^4.23.16",
     "axios": "^1.9.0",
     "bwip-js": "^4.6.0",
     "cross-env": "^7.0.3",
@@ -22,9 +22,11 @@
     "moment": "^2.30.1",
     "next": "^15.3.5",
     "next-redux-wrapper": "^6.0.2",
+    "next-transpile-modules": "^10.0.1",
     "nodemailer": "^7.0.3",
     "prop-types": "^15.8.1",
-    "rc-util": "^5.44.4",
+    "rc-notification": "^5.1.1",
+    "rc-util": "^5.21.1",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
     "react-calendar": "^6.0.0",
