--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^6.0.0",
     "react-cookie": "^8.0.1",
     "react-date-range": "^2.0.1",
