--- a/TripPaw/pom.xml
+++ b/TripPaw/pom.xml
@@ -190,27 +190,28 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-redis</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-		
+
 		<!-- Jackson Databind -->
 		<!-- Jackson Databind -->
 		<dependency>
-		   <groupId>com.fasterxml.jackson.core</groupId>
-		   <artifactId>jackson-databind</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		
+<!--
 		<dependency>
-		    <groupId>org.web3j</groupId>
-		    <artifactId>core</artifactId>
-		    <version>4.8.7</version>
+			<groupId>org.web3j</groupId>
+			<artifactId>core</artifactId>
+			<version>4.10.3</version>  또는 최신 안정 버전 
 		</dependency>
-		
+-->
+
 	</dependencies>
 
 	<build>
