--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -9,6 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@next/bundle-analyzer": "^15.3.3",
     "@rc-component/util": "^1.2.1",
     "@stomp/stompjs": "^7.1.1",
