--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -42,6 +42,7 @@
     "react-kakao-maps-sdk": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^7.6.2",
+    "react-scratchcard": "^1.1.2",
     "react-slick": "^0.30.3",
     "react-sortablejs": "^6.1.4",
     "redux": "^4.0.5",
