--- a/TripPaw/pom.xml
+++ b/TripPaw/pom.xml
@@ -237,6 +237,18 @@
 		    </dependency>
 		<!-- SpringBoot mailService -->
 
+		<!-- 바코드 -->
+		<dependency>
+	        <groupId>com.google.zxing</groupId>
+	        <artifactId>core</artifactId>
+	        <version>3.5.0</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.google.zxing</groupId>
+	        <artifactId>javase</artifactId>
+	        <version>3.5.0</version>
+	    </dependency>
+
 	</dependencies>
 
 	<build>
