0710 class 파일 추적 금지

--- a/TripPaw/.gitignore
+++ b/TripPaw/.gitignore
@@ -8,11 +8,12 @@ target/
 .apt_generated
 .classpath
 .factorypath
-.project
 .settings
 .springBeans
 .sts4-cache
 .class
+bin/
+TripPaw/bin/
 
 ### IntelliJ IDEA ###
 .idea
