--- a/TripPaw/src/main/resources/application.properties
+++ b/TripPaw/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=TripPaw
 ##   		Business Layer			 ##
 #######################################
 #spring.main.web-application-type=none      
-spring.main.web-application-type=servlet 
+spring.main.web-application-type=none 
 
 #Banner Setting
 spring.main.banner-mode=off
@@ -16,7 +16,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
