nft 삭제 로그 db에 저장 / nft 관리자 페이지, 마이페이지 css 추가 /  ai nft 도우미 추가

--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -20,6 +20,7 @@
     "bwip-js": "^4.6.0",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.5",
     "html2canvas": "^1.4.1",
     "immer": "^9.0.19",
     "moment": "^2.30.1",
