--- a/TripPaw_React/package.json
+++ b/TripPaw_React/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "cross-env ANALYZE=false NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start -p 3000"
   },
   "author": "ssdam",
   "license": "ISC",
